--- a/css/headerCss.css
+++ b/css/headerCss.css
@@ -5,7 +5,7 @@ header {
     align-items: center;
     position: fixed;
     width: 100%;
-    background: linear-gradient(135deg, rgb(0, 113, 43), rgb(23, 146, 70));
+    background: linear-gradient(135deg, rgb(32 175 54), rgb(0 95 39));
     color: white;
     font-weight: 700;
     height: 80px;
