--- a/css/main.css
+++ b/css/main.css
@@ -25,6 +25,18 @@ main{
     main {
         padding-top: 70px;
     }
+
+    .date-but {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        flex-direction: column;
+    }
+
+    .date-but button {
+        margin-top: 20px;
+    }
+
 }
 
 
@@ -102,7 +114,7 @@ main{
     content: "";
     position: absolute;
     inset: -18px;
-    background-image: url("../imgs/Frame1.png");
+    /* background-image: url("../imgs/Frame1.png"); */
     background-size: 100% 100%;
     background-repeat: no-repeat;
     z-index: 1;
@@ -199,7 +211,7 @@ main{
     font-size: 12px;
     font-weight: 800;
     cursor: pointer;
-    margin-top: 20px;
+    /* margin-top: 20px; */
     position: relative;
     overflow: hidden;
     z-index: 1;
@@ -237,3 +249,38 @@ main{
 .date-but button:hover::before {
     transform: translateX(100%);
 }
+
+
+
+
+
+/* :root{
+    --imgPreviewimg: url(../imgs/opera-damanhur.jpg);
+    --imgPreview:none;
+}
+body{
+    overflow-x: hidden;
+}
+
+.imgPreview {
+    position: fixed;
+    display: var(--imgPreview);
+    top: 17%;
+    text-align: center;
+    right: 8%;
+    width: 80%;
+    height: 80%;
+    background-image: var(--imgPreviewimg);
+    background-size: contain;
+    background-repeat: no-repeat;
+    z-index: 99;
+} */
+
+.opera-damanhur-butt{
+    background-color: rgba(0, 0, 0, 0);
+    border: 0;
+}
+
+/* body:has(.opera-damanhur-butt:focus){
+    --imgPreview: block;
+} */
