--- a/css/main.css
+++ b/css/main.css
@@ -37,6 +37,11 @@ main{
         margin-top: 20px;
     }
 
+    .frame img {
+        width: 92% !important;
+    }
+
+
 }
 
 
@@ -70,7 +75,7 @@ main{
     width: 100%;
     padding: 80px 0;
     background-image: var(--bgImg);
-    background-size: cover;
+    /* background-size: cover; */
     background-position: center;
 }
 
