--- a/css/mobile.css
+++ b/css/mobile.css
@@ -1,7 +1,7 @@
 @media (max-width: 600px) {
-    body {
+    /* body {
         background-color: blue;
-    }
+    } */
 
     .footerSec {
         display: flex;
