--- a/css/navCss.css
+++ b/css/navCss.css
@@ -6,7 +6,6 @@ input[type="checkbox"] {
     height: 45px;
     border-radius: 3px;
     background-image: url(https://www.svgrepo.com/show/524617/hamburger-menu.svg);
-    /* filter: brightness(0); */
     background-size: 103%;
     cursor: pointer;
 }
@@ -48,4 +47,28 @@ input[type="checkbox"]:checked ~ .mobileNav {
     border-bottom: 1px solid rgba(255, 255, 255, 0.1);
     font-weight: 500;
     text-decoration: none;
+}
+
+
+
+
+
+
+/* goUp */
+#scrollToTopBtn {
+    display: none;
+    position: fixed;
+    bottom: 20px;
+    right: 30px;
+    z-index: 99;
+    border: none;
+    outline: none;
+    background: linear-gradient(135deg, rgb(32 175 54), rgb(0 95 39));
+    color: white;
+    cursor: pointer;
+    padding: 15px;
+    border-radius: 10px;
+}
+.showBtn {
+  display: block;
 }
