english to mobile

--- a/css/headerCss.css
+++ b/css/headerCss.css
@@ -116,3 +116,19 @@ header nav .dropDown .dropDownBlock p{
     opacity: 1;
     transition: all 0.1s linear;
 }
+
+
+
+
+
+
+.BUTTON {
+    color: white;
+    width: 4rem;
+    height: 4rem;
+    font-size: 12px;
+    background-color: #0b8037;
+    border: solid #268b4d;
+    border-radius: 10px;
+    padding: 4px;
+}
