--- a/css/headerCss.css
+++ b/css/headerCss.css
@@ -68,6 +68,13 @@ header nav .dropDown .dropDownBlock p{
     flex-shrink: 0;
 }
 
+.theme-toggle {
+    background: url('https://www.svgrepo.com/show/266961/settings-gear.svg') center 43% no-repeat rgba(39, 174, 97, 1.7) !important;
+    background-size: 36px !important;
+    background-position: center;
+    background-repeat: no-repeat;
+}
+
 .setting-tab {
     position: fixed;
     background-color: aliceblue;
