--- a/css/hero.css
+++ b/css/hero.css
@@ -124,10 +124,12 @@
 }
 
 .heroP1{
+    color: white;
     font-weight: 800;
     /* padding-left: calc(0% + 85px); */
     width: 100%;
 }.heroP2{
+    color: white;
     font-weight: 800;
     /* padding-left: calc(0% - 85px); */
     width: 100%;
