--- a/css/new-main.css
+++ b/css/new-main.css
@@ -1,3 +1,29 @@
+.light{
+    --lightBox:#ffffff;
+    --fontColor: black;
+    --bgWood:#f3f3f3;
+    --bgStone:#e4e4e4;
+
+}
+.dark{
+    --lightBox:#1b1b1b;
+    --fontColor: #ffffff;
+    --bgWood:#2b2b2b;
+    --bgStone:#383838;
+}
+main h2,main p{
+    color: var(--fontColor);
+}
+.stone-bg{
+    /* --bgImg: url('https://img.freepik.com/free-photo/abstract-white-surface-with-clight-pores_1194-7514.jpg?semt=ais_hybrid&w=740&q=80'); */
+    background-color: var(--bgStone) !important;
+}
+.wood-bg{
+    --bgImg: url('https://png.pngtree.com/thumb_back/fh260/background/20210826/pngtree-wood-texture-white-wood-texture-background-image_769768.jpg');
+    background-color: var(--bgWood) !important;
+}
+
+
 /* all */
 *{
     margin: 0;
@@ -64,9 +90,9 @@ main{
 
 
 
-:root{
+/* :root{
     --bgImg: url('https://w0.peakpx.com/wallpaper/399/938/HD-wallpaper-video-game-garry-s-mod-texture-minimalist-thumbnail.jpg')
-}
+} */
 
 
 
@@ -76,7 +102,7 @@ main{
     /* break-inside: avoid; */
     width: 100%;
     padding: 80px 0;
-    background-image: var(--bgImg);
+    /* background-image: var(--bgImg); */
     background-position: center;
     column-width: 23rem;
     /* display: grid; */
@@ -92,7 +118,7 @@ main{
     max-width: 350px;
     display: block;
     text-align: center;
-    background-color: #ffffff;
+    background-color: var(--lightBox);
     border-radius: 15px;
     padding: 20px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
@@ -158,7 +184,7 @@ main{
     }
 
     .artifact-info {
-        width: 90%;
+        /* width: 90%; */
     }
 
     .frame {
@@ -451,4 +477,71 @@ body{
     display: block;
 }.english .arabicMAIN{
     display: none;
+}
+
+
+
+
+
+
+
+
+
+.about{
+    margin: 0 auto;
+    display: flex;
+    gap: 40px;
+    align-items: center;
+    width: 70%;
+    direction: rtl;
+    flex-direction: row;
+    margin-bottom: 100px;
+    break-inside: avoid;
+    margin-bottom: 2rem;
+    display: block;
+    text-align: center;
+    background-color: var(--lightBox);
+    border-radius: 15px;
+    padding: 20px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    transition: all 0.3s ease;
+}
+
+.about .artifact-desc{
+    text-align: start;
+    /* min-width: 24rem; */
+}
+.artifact-info div{
+    display: flex;
+    grid-template-columns: 1fr 16rem;
+    align-items: center;
+}
+@media (max-width: 1015px) {
+    .artifact-info div{
+        flex-direction: column;
+    }
+    .about .artifact-desc{
+        text-align: center;
+    }
+}
+@media (max-width: 700px) {
+    .about{
+        width: 85%;
+    }
+
+
+}
+
+.BEHERA {
+    /* break-inside: avoid-column; */
+    /* break-inside: avoid; */
+    /* width: 100%; */
+    padding: 80px 0rem;
+    /* background-image: var(--bgImg); */
+    background-position: center;
+    /* column-width: 23rem; */
+    /* display: grid; */
+    grid-template-columns: repeat(3, 1fr);
+    gap: 40px;
+    justify-items: center;
 }
