--- a/css/footerCss.css
+++ b/css/footerCss.css
@@ -36,7 +36,6 @@ footer {
 }
 
 .imgBank img {
-    /* background-color: #f1f1f1; */
     border: 1px solid black;
     padding: 3px;
     font-size: 30px;
@@ -51,14 +50,10 @@ footer p{
     margin-bottom: 7px;
 }
 
-footer a:hover{
-    /* background-color: rgb(37, 37, 37); */
-}
-
 .col h3 {
     font-size: 20px;
     margin-bottom: 15px;
-    color: #f7d774; /* ذهب خفيف */
+    color: #f7d774; 
     font-weight: 700;
 }
 
@@ -77,7 +72,6 @@ footer a:hover {
 .imgBank {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
-    /* background-color: #111; */
     padding: 12px;
     gap: 5px;
     border-radius: 8px;
